2006-12-17  Stephanos Manos <stefmanos@gmail.com>

	* data/gnome-commander.spec.in:
	Removed unnecessary .a libs from rpm
	Added dependencies for optional libs

2006-12-14  Henry Yonathan <henry.yonathan@gmail.com>

	* src/gnome-cmd-file-list.c:
	Prevent int-viewer from opening dirs

2006-12-12  Stephanos Manos <stefmanos@gmail.com>

	* data/gnome-commander.spec.in:
	Minor cleanups/fixes to make rpmlint silent

2006-12-12  sstanev <sstanev@narod.ru>

	* configure.in: Added bg in ALL_LINGUAS

2006-12-11  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.4



##############################################################################
#                                   1.2.3                                    #
##############################################################################

2006-12-11  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.3

	* src/gnome-cmd-mkdir-dialog.c:
	Fixed bug #384752 (wrong permissions for new dirs)
	


##############################################################################
#                                   1.2.2                                    #
##############################################################################

2006-12-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir-indicator.c:
	Yet another fix for SMB UNC handling

2006-12-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir-indicator.c:
	Fixed SMB UNC handling

2006-12-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.c:
	* src/gnome-cmd-combo.c:
	* src/gnome-cmd-delete-dialog.c:
	* src/gnome-cmd-dir-indicator.c:
	* src/gnome-cmd-ftp-dialog.c:
	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-prepare-xfer-dialog.c:
	* src/gnome-cmd-rename-dialog.c:
	* src/gnome-cmd-search-dialog.c:
	* src/gnome-cmd-xfer-progress-win.c:
	Replaced deprecated gtk_widget_set_usize() with gtk_widget_set_size_request()

2006-12-01  Piotr Eljasiak  <epiotr@use.pl>

	* plugins/cvs/cvs-plugin.c: