@@ -41,8 +41,12 @@ GNOMEUI_REQ=2.0.0
 GNOMEVFS_REQ=2.0.0
 LIBEXIF_REQ=0.6.12
 LIBIPTCDATA_REQ=0.2.1
-ID3LIB_REQ=3.8.1
+ID3LIB_REQ=3.8.3
 
+AC_SUBST(GLIB_REQ)
+AC_SUBST(GTK_REQ)
+AC_SUBST(GNOMEUI_REQ)
+AC_SUBST(GNOMEVFS_REQ)
 AC_SUBST(LIBEXIF_REQ)
 AC_SUBST(LIBIPTCDATA_REQ)
 AC_SUBST(ID3LIB_REQ)
