@@ -4,6 +4,7 @@ gnome-commander 1.2.4
 
 Bug fixes:
  * Fixed problem with opening dirs by intviewer
+ * Build fixes
 
 New features:
  * New or updated translations: bg
